--- a/index.html
+++ b/index.html
@@ -27,5 +27,13 @@
         <image src="4bf3cc23ddd78e7469b6748319798927-90-x550x2.jpg" width="550" height="550"></image>
     </div>
     
+    <div>
+        <image src="86a3175dca00b596b133e0dc67ae8b1e-90-x380.jpg" width="380" height="380"></image>
+    </div>
+
+    <div>
+        <image src="86a3175dca00b596b133e0dc67ae8b1e-90-x380x2.jpg" width="380" height="380"></image>
+    </div>
+    
 </body>
 </html>
