--- a/index.html
+++ b/index.html
@@ -35,5 +35,17 @@
         <image src="86a3175dca00b596b133e0dc67ae8b1e-90-x380x2.jpg" width="380" height="380"></image>
     </div>
     
+    <div>
+        <image src="mountains-72.jpg" width="380" height="380"></image>
+    </div>
+
+    <div>
+        <image src="mountains-300.jpg" width="380" height="380"></image>
+    </div>
+
+    <div>
+        <image src="mountains-300@2x.jpg" width="380" height="380"></image>
+    </div>
+    
 </body>
 </html>
